fix right buttons on 2011 & 2012

--- a/css/2012.css
+++ b/css/2012.css
@@ -395,6 +395,10 @@
 	padding-right: 0px;
 }
 
+.ytp-big-mode .ytp-right-controls .ytp-button {
+    width: 40px !important;
+}
+
 /* SUBTITLES BUTTON */
 
 .ytp-subtitles-button.ytp-button[title="Subtitles/closed captions unavailable"] {
