--- a/css/2011.css
+++ b/css/2011.css
@@ -481,6 +481,10 @@
 	padding-right: 0px;
 }
 
+.ytp-big-mode .ytp-right-controls .ytp-button {
+    width: 40px !important;
+}
+
 /* SUBTITLES BUTTON */
 
 .ytp-subtitles-button.ytp-button {
