additional fixes & report button on the settings page

--- a/html/popup.css
+++ b/html/popup.css
@@ -43,8 +43,8 @@ body {
 
 .links a {
     font-weight: 800;
-    margin-right: 1em;
-    font-size: 14px;
+    margin-right: 6px;
+    font-size: 12px;
 }
 
 
