--- a/css/2012.css
+++ b/css/2012.css
@@ -165,26 +165,6 @@
 
 /* ################################# */
 
-/* "BEZEL" ICONS */
-
-.ytp-bezel-icon {
-    display: none;
-}
-
-.ytp-bezel[aria-label="Pause"] {
-    background: url('chrome-extension://__MSG_@@extension_id__/img/big-pause.png');
-    background-size: cover;
-    border-radius: 0;
-}
-
-.ytp-bezel[aria-label="Play"] {
-    background: url('chrome-extension://__MSG_@@extension_id__/img/big-play.png');
-    background-size: cover;
-    border-radius: 0;
-}
-
-/* ################################# */
-
 /* SCRUBBER */
 
 .ytp-scrubber-button {
@@ -394,6 +374,7 @@
 .ytp-right-controls {
 	position: relative !important;
 	padding-right: 0px;
+	bottom: 1px;
 }
 
 .ytp-big-mode .ytp-right-controls .ytp-button {
@@ -413,7 +394,7 @@
 /* SETTINGS BUTTON */
 
 .ytp-button.ytp-settings-button:after {
-    background: var(--pt-setting-after-label);
+    background-color: var(--pt-setting-after-label);
 	top: 8px !important;
 }
 
