fix some more issues relating to 2006

--- a/css/2006.css
+++ b/css/2006.css
@@ -231,7 +231,7 @@
 }
 
 .ytp-button svg path, .ytp-button .ytp-svg-shadow {
-	display: none;
+	display: none !important;
 }
 
 /* ################################# */
@@ -304,6 +304,7 @@
 
 /* VOLUME BUTTON */
 .ytp-button.ytp-mute-button {
+    display: inline-block !important;
     background: url('chrome-extension://__MSG_@@extension_id__/img/2006/volume-button.png');
     background-position: center center !important;
     background-repeat: no-repeat !important;
@@ -329,18 +330,21 @@
 /* VOLUME PANEL */
 
 .ytp-chrome-bottom .ytp-volume-area {
-    display: inline-flex;
+    display: inline-flex !important;
     position: sticky;
-    padding: 0 2px 0 12px;
+    padding: 0 0px 0 16px;
+    width: 94px;
     height: 32px;
     bottom: 2px;
 }
 
 .ytp-volume-area .ytp-volume-panel {
+    display: inline-block !important;
     width: 46px !important;
 }
 
 .ytp-big-mode .ytp-volume-area .ytp-volume-panel {
+    display: inline-block !important;
     width: 66px !important;
     position: relative;
     top: 2px;
@@ -378,10 +382,11 @@
 
 .ytp-volume-slider-handle::before {
 	background: var(--pt-volume-slider);
+    width: 58px;
 }
 
 .ytp-volume-slider-handle::after {
-    background: rgb(15, 15, 15);
+    background: rgb(135, 135, 135);
 }
 
 /* ################################# */
@@ -413,8 +418,9 @@
 /* SUBTITLES BUTTON */
 
 .ytp-subtitles-button.ytp-button {
+    display: inline-block !important;
     background: url(chrome-extension://__MSG_@@extension_id__/img/2011-icons.png) no-repeat;
-    background-position: -57px -199px;
+    background-position: -60px -199px;
     background-size: 180px !important;
 }
 
@@ -423,7 +429,7 @@
 }
 
 .ytp-subtitles-button.ytp-button[aria-pressed=true] {
-	background-position: -26px -146px;
+	background-position: -28px -146px;
 }
 
 .ytp-subtitles-button.ytp-button[aria-pressed=true]:hover {
