--- a/css/3rd-party-style.css
+++ b/css/3rd-party-style.css
@@ -72,9 +72,10 @@ html[static] #movie_player.html5-video-player[aria-label="YouTube Video Player"]
 }
 
 /* for my theater mode gang */
-html ytd-watch-flexy #movie_player.html5-video-player[aria-label="YouTube Video Player"] video {
+html[static] ytd-watch-flexy #movie_player.html5-video-player[aria-label="YouTube Video Player"] video {
     position: relative;
-    margin: auto;
+    margin: auto !important;
+    width: 100% !important;
     height: 100% !important;
     max-width: none !important;
     max-height: none !important;
